fix #1007 improve CDN fields alignment

--- a/src/scss/components/fields/_multiple.scss
+++ b/src/scss/components/fields/_multiple.scss
@@ -41,11 +41,15 @@
     }
 
     input[type=text]{
-        min-width: 100px;
+        flex-grow: 2;
     }
 
     select{
         height: 30px;
+    }
+
+    &-default {
+        margin-right: 20px;
     }
 
     &-list{
@@ -72,7 +76,6 @@
         position: relative;
         top: 3px;
         @include font-size(16,16);
-        margin-right: $space*2;
         @include transition(color,200ms);
 
         &:focus{
